# antiseptic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  init.lua  pyproject.toml
.github/workflows/: run-quality-gates.yml
python/antiseptic/: __init__.py  _lowlevel.pyi
python/antiseptic/assets/dictionaries/: en.txt
src/: find_files.rs  lib.rs  spellcheck.rs
src/config/: config.rs
src/errors/: all_errors.rs  mod.rs
