[project]
name = "antiseptic"
version = "0.2.0"
description = "CI spell-checking tool"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "AGPL-3.0-only" }

[project.scripts]
antiseptic = "antiseptic:main"

[project.urls]
Homepage = "https://github.com/clockback/antiseptic"
Issues = "https://github.com/clockback/antiseptic/issues"
Changelog = "https://github.com/clockback/antiseptic/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "antiseptic._lowlevel"
features = ["pyo3/extension-module"]
include = [
    "assets/dictionaries/*.txt",
]

[tool.antiseptic]

exclude = [
    "*.lock",
    "*.pyc",
    "*.so",
    "*.tar.gz",
    "*.whl",
    "target",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]

[dependency-groups]
dev = [
    "ruff>=0.4.7",
    "ty>=0.0.1a21",
]
